@@ -40,6 +40,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #25364: zipfile now works in threads disabled builds.
+
 - Issue #25328: smtpd's SMTPChannel now correctly raises a ValueError if both
   decode_data and enable_SMTPUTF8 are set to true.
 
